--- a/src/components/QuestionInput.css
+++ b/src/components/QuestionInput.css
@@ -35,7 +35,7 @@
 }
 
 .question-input::placeholder {
-  color: #333;
+  color: #666;
   font-style: italic;
   font-family: var(--font-display);
 }
